# heart-berry

./: app.py  data.db  factory_setup.py  heart.desktop  heart.sh  main.py  pyproject.toml  requirements.txt
Controller/: forgotpassword_screen.py  listrecord_screen.py  login_screen.py  main_screen.py  onboarding_screen.py  preview_screen.py  register_screen.py
Model/: base_model.py  forgot_password_screen.py  forgotpassword_screen.py  helper.py  listrecord_screen.py  main_screen.py  model_status.py  on_boarding_screen.py  onboarding_screen.py  preview_screen.py  register_screen.py
Utility/: events.py  form_validator.py  status.py
View/: base_screen.py  screens.py
View/Common/components/: basic_dialog.py  form_field.kv  loading_heart.kv  login_form_field.kv  nav.kv  nav.py  select_field.kv  select_field.py
View/ForgotpasswordScreen/: forgotpassword_screen.kv  forgotpassword_screen.py
View/ListrecordScreen/: listrecord_screen.kv  listrecord_screen.py
View/LoginScreen/: login_screen.kv  login_screen.py
View/MainScreen/: data.py  diagnosis_form.kv  diagnosis_form.py  main_screen.kv  main_screen.py
View/MainScreen/components/: dialog.py
View/OnboardingScreen/: onboarding_screen.kv  onboarding_screen.py
View/PreviewScreen/: preview_screen.kv  preview_screen.py
View/RegisterScreen/: register_screen.kv  register_screen.py
assets/models/: heart.tflite
libs/: db.py  tflite.py
